--- a/index.html
+++ b/index.html
@@ -124,7 +124,17 @@
                 <div class="p-4 md:w-1/3">
                     <iframe
                     width="348" height="230"
-                    <video class="absolute w-150 h-150 object-cover object-center" src="VID-20220110-WA0020.mp4" controls autoplay="false" preload="none" ></video>
+                    <video class="absolute w-150 h-150 object-cover object-center" src="VID-20220110-WA0020.mp4" controls autoplay="true" preload="none" ></video>
+                </iframe>
+                <div class="h-full border-1 border-white-200">
+                    <div class="p-6">
+                    </div>
+                  </div>
+                </div>
+                <div class="p-4 md:w-1/3">
+                    <iframe
+                     width="348" height="230"
+                     <video class="absolute w-150 h-150 object-cover object-center" src="VID-20220109-WA0050.mp4" controls autoplay="true" ></video>
                 </iframe>
                 <div class="h-full border-1 border-white-200">
                     <div class="p-6">
@@ -134,17 +144,7 @@
                 <div class="p-4 md:w-1/3">
                     <iframe
                     width="348" height="230"
-                    <video class="absolute w-150 h-150 object-cover object-center" src="VID-20220109-WA0050.mp4" controls autoplay="false" ></video>
-                </iframe>
-                <div class="h-full border-1 border-white-200">
-                    <div class="p-6">
-                    </div>
-                  </div>
-                </div>
-                <div class="p-4 md:w-1/3">
-                    <iframe
-                    width="348" height="230"
-                    <video class="absolute w-150 h-150 object-cover object-center" src="VID-20220107-WA0026.mp4" controls autoplay="false" ></video>
+                    <video class="absolute w-150 h-150 object-cover object-center" src="VID-20220107-WA0026.mp4" controls autoplay="true" ></video>
                 </iframe>
                 <div class="h-full border-1 border-white-200">
                     <div class="p-6">
